--- a/index.html
+++ b/index.html
@@ -1,46 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="movieApp">
   <head>
     <meta charset="utf-8">
-    <title>Angular Movie Search</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Movie Search</title>
 
-<link rel="stylesheet" href="styles/style.css">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+          
+    <link rel="stylesheet" href="/css/style.css" media="screen" charset="utf-8">
+    <base href="/">
   </head>
-  <body ng-app='movieSearch'>
+  <body>
 
-    <nav class='blue'>
-      <div class="nav-wrapper container">
-        <a ui-sref="home" class="brand-logo"> Movie Search App</a>
-        <ul class="right hide-on-med-and-down">
-        </ul>
-      </div>
-    </nav>
+   <div class="homeContainer">
+     <h1> Angular OMDb API Search </h1>
+     <form ng-model="searchMovie" name="searchMovie" class="searchBox">
+       <label for="movieSearch">Enter a movie by title</label>
+       <input type="text" name="movieSearch" ng-model="home.movie" placeholder="movie title e.g. 'Back to the Future'"/>
+       <button type="submit" ui-sref="search({ id: home.movie })">Search</button>
+     </form>
 
-<div ui-view='search'>
+    </div>
 
+    <div class="view" ui-view></div>
 
-</div>
-
-<div ui-view='movies'>
-
-
-</div>
-
-
-
-
-
-
-
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
-    <script src="./app.js"></script>
-    <script src="./scripts/services/movieSearch.js"></script>
-    <script src="./scripts/controllers/MovieController.js"></script>
-    <script src="./scripts/controllers/SearchController.js"></script>
+    <!--Scripts-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/js/controllers.js"></script>
   </body>
 </html>
